Sculpt Mode - Layer Brush has bad behaviours and create artifacts #70324

Closed
opened 2019-09-28 13:12:51 +02:00 by Juanfran Matheu · 3 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13570 Core Profile Context 19.8.1 26.20.13001.29010

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-27 14:52, hash: 3c7707b49f

Short description of error
When using low brush size values, like sculpting just single vertices or couples, layer brush (and others) has bad behaviours and create artifacts, this wasn't happening in Blender 2.80 so this is sure caused by the new 3d brush cursor.

Exact steps for others to reproduce the error

  • Subdivide o remesh default cube a little
  • choose layer brush with a little brush size
  • try to sculpt with it like it should be

USING 2.81
{F7778569}

USING 2.80
2019-09-28 13-10-33.mp4

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13570 Core Profile Context 19.8.1 26.20.13001.29010 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-27 14:52, hash: `3c7707b49f` **Short description of error** When using low brush size values, like sculpting just single vertices or couples, layer brush (and others) has bad behaviours and create artifacts, this wasn't happening in Blender 2.80 so this is sure caused by the new 3d brush cursor. **Exact steps for others to reproduce the error** - Subdivide o remesh default cube a little - choose layer brush with a little brush size - try to sculpt with it like it should be **USING 2.81** **{[F7778569](https://archive.blender.org/developer/F7778569/2019-09-28_13-09-40.mp4)}** **USING 2.80** [2019-09-28 13-10-33.mp4](https://archive.blender.org/developer/F7778573/2019-09-28_13-10-33.mp4)

Added subscriber: @jfmatheu

Added subscriber: @jfmatheu
Pablo Dobarro self-assigned this 2019-09-28 13:51:36 +02:00

This issue was referenced by 29f25da769

This issue was referenced by 29f25da76924a59e82e5c01d9c54ff75943a1f1a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70324
No description provided.