Fix T70324: Layer Brush has bad behaviours and create artifacts

Reviewed By: brecht

Maniphest Tasks: T70324

Differential Revision: https://developer.blender.org/D5934